Adding the dataframe listing the subsectors in which the energy facilities operate

--- a/Phase 2 - Data description.qmd
+++ b/Phase 2 - Data description.qmd
@@ -16,6 +16,7 @@ library(tidyr)
 ```{r}
 emissions_data <- vroom(here("data", "emissions_by_unit_and_fuel_type_c_d_aa.csv"))
 workforce_data <- vroom(here("data", "qwi_ca_se_f_gs_n4_oslp_u.csv"))
+subsectors_type <- vroom(here("data", "subsect_types.csv"))
 ```
 
 
