--- a/Phase 2 - Data description.qmd
+++ b/Phase 2 - Data description.qmd
@@ -26,8 +26,23 @@ subsectors_type <- vroom(here("data", "subsect_types.csv"))
 
   https://github.com/vito100-8/Research_project.git
   
+Due to our use of very large data files, we used Git LFS (Large File Storage) that allowed us to push our data into the project repository.
+
 ### Some infos about the data sources
 
+We used two data sources : the US Environmental Protection Agency and the US Census Bureau.
+
+#### Environmental Protection Agency
+
+The Environmental Protection Agency (EPA) is an American federal agency which takes part in scientific research and enforces environmental laws by developing regulations to contribute to the preservation of the environment. Its main missions are fighting against climate change, reducing pollution, and ensuring environmental equity.
+As part of its monitoring and regulatory role, the EPA produces multiple databases, such as the Air Quality System (AQS, which contains data from air pollution monitoring stations across the U.S; Greenhouse Gas (GHG) Reporting Program which provides data on greenhouse gas emissions from large facilities. The dataset which we will use in this project is part of the GHG Program. 
+All datasets of the EPA are open data, as part of the objective of scientific transparency which is promoted by the agency. The EPA also possesses its own built-in data tools, like EnviroFacts, which allows for an immediate  analysis of data. 
+
+#### United States Census Bureau
+
+The U.S. Census Bureau, part of the Department of Commerce, is the federal agency responsible for collecting and analyzing data about the U.S. population and economy. Its primary role is conducting the decennial U.S. Census, which determines congressional representation, legislative district boundaries, and the allocation of federal funds for infrastructure, healthcare, etc. 
+The agency also conducts the Economic Census every five years, which provides data on the industries and businesses in the US. The agency also conducts yearly, quarterly and monthly surveys about the socio-economic dynamics of the population and labor statistics. The dataset we used is part of the Quarterly Workforce Indicators,coming from the Longitudinal Employer-Household Dynamics page. The QWI is particular in the way that it is able to link workers to where they work, which allows for the identification of worker flows, demographics etc.
+The US Census Bureau’s data is accessible and open to all. Through the platform data.census.gov, one is able to add and filter data directly for analysis or creation of geographic maps, tables etc.
 
 ### Links to the dataset sources
 
@@ -41,7 +56,6 @@ Quarterly Workforce Indicators (QWI) Data (from the US Census Bureau) :
 https://lehd.ces.census.gov/data/qwi/latest_release/al/qwi_al_se_fs_gs_n4_op_u.csv.gz
 
 We manually unzipped the unique datafile before loading it into R. 
-
 
 ## About the datasets
 
