--- a/Phase 2 - Data description.qmd
+++ b/Phase 2 - Data description.qmd
@@ -20,7 +20,9 @@ library(knitr)
 library(kableExtra)
 library(readr)
 library(ggplot2)
+library(httr2)
 ```
+
 
 ## Adding the data
 
@@ -36,15 +38,18 @@ subsectors_type <- vroom(here("data", "subsect_types.csv"))
 
 ## Links and sources
 
+
 ### Link to the github project
 
-https://github.com/vito100-8/Research_project.git
+You can find our github repository here : [Research Project](https://github.com/vito100-8/Research_project.git).
 
 Due to our use of very large data files, we used Git LFS (Large File Storage) that allowed us to push our data into the project repository.
+
 
 ### Some infos about the data sources
 
 We used two data sources : the US Environmental Protection Agency and the US Census Bureau.
+
 
 #### Environmental Protection Agency
 
@@ -54,6 +59,7 @@ As part of its monitoring and regulatory role, the EPA produces multiple databas
 The dataset which we will use in this project is part of the GHG Program.
 All datasets of the EPA are open data, as part of the objective of scientific transparency which is promoted by the agency.
 The EPA also possesses its own built-in data tools, like EnviroFacts, which allows for an immediate analysis of data.
+
 
 #### United States Census Bureau
 
@@ -67,9 +73,12 @@ The QWI is particular in the way that it is able to link workers to where they w
 The US Census Bureau’s data is accessible and open to all.
 Through the platform data.census.gov, one is able to add and filter data directly for analysis or creation of geographic maps, tables etc.
 
+
 ### Links to the dataset sources
 
-Emissions by Unit and Fuel Type (from the US Environmental Protection Agency) : https://www.epa.gov/system/files/other-files/2024-10/emissions_by_unit_and_fuel_type_c_d_aa.zip
+Emissions by Unit and Fuel Type : [US Environmental Protection Agency](https://www.epa.gov/ghgreporting/data-sets).
+
+To download the dataset : [Emissions Zip File](https://www.epa.gov/system/files/other-files/2024-10/emissions_by_unit_and_fuel_type_c_d_aa.zip).
 
 The zipped file contained an Excel binary file, with four sheets : Emissions by Unit type, Emissions by Fuel type, Industry type referencing to the first two sheets and a Q&A sheet.
 We chose to focus on only the first sheet, which contained CO2 emissions of energy producers.
@@ -77,12 +86,11 @@ The third sheet containing information about the sub-sectors in which the energy
 We saved these two sheets in two separate CSV files.
 We needed to unzip it and create a CSV manually because the native file contained lines not understandable by R.
 
-Quarterly Workforce Indicators (QWI) Data (from the US Census Bureau) :
-For the State of California : 
-https://lehd.ces.census.gov/data/qwi/latest_release/al/qwi_ca_se_f_gs_n4_oslp_u.csv.gz
+Quarterly Workforce Indicators (QWI) Data : [US Census Bureau](https://lehd.ces.census.gov/data/#qwi).
 
-For the State of Texas : 
-https://lehd.ces.census.gov/data/qwi/latest_release/al/qwi_tx_se_f_gs_n4_oslp_u.csv.gz
+For the State of California :[California_WF](https://lehd.ces.census.gov/data/qwi/latest_release/al/qwi_ca_se_f_gs_n4_oslp_u.csv.gz).
+
+For the State of Texas : [Texas_WF](https://lehd.ces.census.gov/data/qwi/latest_release/al/qwi_tx_se_f_gs_n4_oslp_u.csv.gz).
 
 We manually unzipped these two datafiles before loading it into R. 
 
@@ -91,7 +99,7 @@ We manually unzipped these two datafiles before loading it into R.
 
 ```{r}
 #| echo: false
-#Summary table for emissions
+# Summary table for emissions
 emissions_summary <- emissions_data |>
   summarise(
     "Number of rows" = nrow(emissions_data),
@@ -99,7 +107,8 @@ emissions_summary <- emissions_data |>
     "Period" = paste(range(`Reporting Year`), collapse= " - "),
     "Periodicity" = "Annual",
     "Extremum levels of CO2 emissions " = paste(range(`Unit CO2 emissions (non-biogenic)`), collapse = " - "),
-    "Number of sectors" = n_distinct(unlist(strsplit(paste(`Industry Type (sectors)`, collapse = ","), ",\\s*"))), #separate the rows that have a "," to not double count firms in several subsectors as distinct values
+    ### separate the rows that have a "," to not double count firms in several subsectors as distinct values
+    "Number of sectors" = n_distinct(unlist(strsplit(paste(`Industry Type (sectors)`, collapse = ","), ",\\s*"))), 
     "Number of subparts" = n_distinct(unlist(strsplit(paste(`Industry Type (subparts)`, collapse = ","), ",\\s*"))),
     "Number of different companies" = length(unique(`Primary NAICS Code`)),
     "Total number of missing values across the sheet" = sum(sapply(emissions_data, function(x) sum(is.na(x))))
@@ -110,12 +119,11 @@ emissions_summary |>
   kable_styling(full_width = T, bootstrap_options = c("striped", "hover", "condensed"))
 ```
 
-
 ```{r}
 #| echo: false
-#Summary table for workforce
+# Summary table for workforce
 
-##workforce summary for California
+## workforce summary for California
 workforce_ca_summary <- workforce_ca_data |>
   summarise(
     "State" = "California",
@@ -128,7 +136,7 @@ workforce_ca_summary <- workforce_ca_data |>
     "Total number of missing values across the sheet" = sum(sapply(workforce_ca_data, function(x) sum(is.na(x))))
   )
 
-##workforce summary for Texas
+## workforce summary for Texas
 workforce_tx_summary <- workforce_tx_data |>
   summarise(
     "State" = "Texas",
@@ -150,12 +158,12 @@ workforce_summary |>
   kable_styling(full_width = TRUE, bootstrap_options = c("striped", "hover", "condensed"))
 ```
 
-
 ```{r}
-## Join California and Texas and  summary of this join
-### Joining the two datasets
+#| echo: false
+# Join California and Texas and summary of this join
+## Joining the two datasets
 
-#### Giving geography the same class for both in order to bind rows (it was double for Texas and character for California previously)
+### Giving geography the same class for both in order to bind rows (it was double for Texas and character for California previously)
 workforce_tx_data <- workforce_tx_data |>
   mutate(geography = as.character(geography))
 
@@ -164,7 +172,7 @@ workforce_ca_tx <- bind_rows(
   workforce_ca_data |> mutate(Region = "California"),
   workforce_tx_data |> mutate(Region = "Texas"))
 
-### Summarizing the combined dataset
+## Summarizing the combined dataset
 workforce_ca_tx_summary <- workforce_ca_tx |>
   summarise(
     "Region" = "California, Texas",
@@ -177,47 +185,56 @@ workforce_ca_tx_summary <- workforce_ca_tx |>
     `Total number of missing values across the sheet` = sum(sapply(workforce_ca_tx, function(x) sum(is.na(x))))
   )
 
-### Displaying the combined summary
+## Displaying the combined summary
 workforce_ca_tx_summary |>
   kable("html", caption = "Combined Workforce Database Information") |>
   kable_styling(full_width = TRUE, bootstrap_options = c("striped", "hover", "condensed"))
-
-
 ```
+
 
 ## Description of key variables
 
+
 ### Emissions dataset
 
-`Primary NAICS Code` : this variable identifies each firm and will allow us to merge the two datasets by agregating each firm into a Naics code 4 (subsectors).
+`Primary NAICS Code` : this variable identifies each firm and will allow us to merge the two datasets by agregating each firm into a NAICS code 4 (at the level of industries).
 `Unit CO2 emissions (non-biogenic)`: gives the quantity of CO2 emissions for each unit (described by the variables `Unit Name` and `Unit Type`) of each firm for a given year
 
 
 ### Workforce datasets
 
-`industry`: NAICS 4 code that identifies the subsector 
+`industry`: NAICS 4 code that identifies the industries
 `geography`: geography code that identifies the state
 `EmpTotal`: the variable counts the estimated number of people employed in a firm at any time during the quarter according to the subsector, age and sex categories (we will agregate those specifications later on)
 `EarnS` : gives us the average monthly earnings of employees with stable jobs (in dollars)
 
 
-
 ## Data treatment
 
-Our analysis period will be 2011-2023.
 
 ### Merge preparation for the workforce dataset (California and Texas)
 
+To match with the more restricted time period covered by the `emissions_data` dataset, we started by reducing the time period covered by the `workforce_ca_data` and the `workforce_tx_data`datasets to be between 2011 and 2023. 
+
+The `industry` variable in the `emissions_data` dataset contains NAICS4 level industry codes. We therefore filtered the two workforce datasets to show only the observations when `ind_level` was equal to 4 (which corresponds to NAICS 4). 
+
+We then selected the key variables from both workforce datasets according to our research question. We decided to keep the `sex` and `education` variables in case we would need them for future analysis ex. checking for endogeneity (as instrument variables).
+
+Finally, as to match the annual data contained in the `emissions_data` dataset, we replaced the values of our interest variables, which were quarterly counts/rates, with average annual data by taking the mean of their quarterly values. 
+The new average annual variables are ; `avg_Emp` for the average annual Employment Count, `avg_FrmJbC` for the average annual Firm Job net Change (Hire-Separation), and `avg_EarnS` for the annual average wage (paid for a month).
+
 ```{r}
+#| message: false
+
 ## for the California workforce dataset
 clean_wf_ca_data <-
   workforce_ca_data |>
-  ## selection of analysis period and sector-level
+  ### selection of analysis period and sector-level
   filter(year > 2010 & year < 2024) |>
   filter(ind_level == 4) |>
-  ## selection of variables of interest
+  ### selection of variables of interest
   select(industry, sex, education, year, quarter,geography, EmpTotal, EarnS, FrmJbC) |>
-  ## replacing quarterly data with annual data by taking the mean value of the four quarters in a year
+  ### replacing quarterly data with annual data by taking the mean value of the four quarters in a year
   group_by(industry, sex, education, year, geography) |>
   summarise(
     avg_Emp = round(mean(EmpTotal, na.rm = TRUE)),
@@ -228,12 +245,12 @@ clean_wf_ca_data <-
 ## for the Texas workforce dataset
 clean_wf_tx_data <-
   workforce_tx_data |>
-  ## selection of analysis period and sector-level
+  ### selection of analysis period and sector-level
   filter(year > 2010 & year < 2024) |>
   filter(ind_level == 4) |>
-  ## selection of variables of interest
+  ### selection of variables of interest
   select(industry, sex, education, year, quarter, geography, EmpTotal, EarnS, FrmJbC) |>
-  ## replacing quarterly data with annual data by taking the mean value of the four quarters in a year
+  ### replacing quarterly data with annual data by taking the mean value of the four quarters in a year
   group_by(industry, sex, education, year, geography) |>
   summarise(
     avg_Emp = round(mean(EmpTotal, na.rm = TRUE)),
@@ -242,93 +259,110 @@ clean_wf_tx_data <-
   )
 ```
 
+
 ### Merge preparation for the emissions dataset
 
 ```{r}
-#keeping only data from 2011- 2023 
-emissions_data <- emissions_data |> 
+#| message: false
+
+## filtering the initial data
+emissions_data <- emissions_data |>
+  ### keeping only data from 2011 - 2023 
   filter(`Reporting Year` > 2010)
 
-#keeping only the relevant columns
+
 emissions_data <- emissions_data |>
+  ### keeping only the relevant columns
   select(State:`Unit Type`, `Unit CO2 emissions (non-biogenic)`:`Unit Biogenic CO2 emissions (metric tons)`)
 
-#agregating the database into a subsectors (NAICS 4) level
-
+## aggregating the database into a subsectors (NAICS 4) level
 clean_em_data <- emissions_data |> 
-  filter(State == "CA" | State == "TX") |>  # We only keep Californian and Texas firms
+  ### We only keep Californian and Texas firms
+  filter(State == "CA" | State == "TX") |>  
   mutate(
-    `NAICS 4 (subsectors)` = substr(`Primary NAICS Code`, 1, 4), #agregation at NAICS 4 level
-    # To avoid issues with the NA numbers during the sum after with parse number (convert from character to numerical)
+    ### aggregation at NAICS 4 level
+    `NAICS 4 (subsectors)` = substr(`Primary NAICS Code`, 1, 4), 
+    ### to avoid issues with the missing values during the sum after with parse number (convert from character to numerical)
     `Unit CO2 emissions (non-biogenic)` = parse_number(`Unit CO2 emissions (non-biogenic)`),  
     `Unit Methane (CH4) emissions` = parse_number(`Unit Methane (CH4) emissions`),
     `Unit Nitrous Oxide (N2O) emissions` = parse_number(`Unit Nitrous Oxide (N2O) emissions`),
   ) |> 
-  # Group by NAICS subsectors, reporting year and unit type
+  ### group by NAICS subsectors i.e. industries, reporting year and unit type
   group_by(`NAICS 4 (subsectors)`, `Reporting Year`, State) |> 
   summarise(
-    #We keep our values of interest
+    ### we keep our values of interest
     `Total CO2 Emissions (non_biogenic)` = sum(`Unit CO2 emissions (non-biogenic)`, na.rm = TRUE), 
     `Total CH4 Emissions` = sum(`Unit Methane (CH4) emissions`, na.rm = TRUE),
     `Total N20 Emissions` = sum(`Unit Nitrous Oxide (N2O) emissions`, na.rm = TRUE),
-    `Number of firms` = n(),  
+    `Total Biogenic C02 emissions` = sum(`Unit Biogenic CO2 emissions (metric tons)`, na.rm = TRUE ),
+    `Number of firms` = n()
   )
 
-#changing variable names to have them similar across the two datasets
+## changing variable names to have them similar across the two datasets
 clean_em_data <- clean_em_data |>
   rename(year = `Reporting Year`)
 clean_em_data <- clean_em_data |> 
   rename(industry = `NAICS 4 (subsectors)`)
 ```
 
+
 ### Merging datasets
 
-```{r}
-#Combining the two workforces datasets
+After we cleaned up the datasets, we first merged the `clean_wf_tx_data` and the `clean_wf_ca_data` datasets together to be stacked one under the other. This way, the observations from the two datasets can only be differenciated by the `geography column`, which contains the geopgraphy code correspondonding to the two chosen States. 
 
-##Bind rows to have in a single dataset both state workforce data (identified by the geography variable)
+To be able to execute the second merge with the `clean_em_data` dataset, we also renamed `geography` to `State` and changed the observations, which were geography codes, to the abbreviation of the state name, as it figures in the `clean_em_data` dataset.
+
+Finally, we did a `left_join()` merge of the two final datasets. As the workforce datasets contained observations for all industry sectors, while the `èmissions_data` dataset only contained observations for energy producing sectors, we did a final filtering to drop the missing values corresponding to non-energy producing sectors. 
+
+```{r}
+# Combining the two workforces datasets
+
+## bind rows to have in a single dataset both state workforce data (identified by the geography variable)
 join_wf_data <- bind_rows(clean_wf_tx_data, clean_wf_ca_data)
 
-## Rename geography into a state variable as in the emission dataset to be able to merge with this variable as well
+## rename geography into a state variable as in the emission dataset to be able to merge with this variable as well
 join_wf_data <- join_wf_data |> 
   mutate(State = if_else(geography == "48", "TX", "CA") ) |>
   select(!geography)
-  
-
 ```
 
-
 ```{r}
-#Merging emissions and workforce datasets using workforce data as master, so we can keep all observations from the latter dataset
+#| message: false
+# Merging emissions and workforce datasets using workforce data as master, so we can keep all observations from the latter dataset
 joined_dataset <- left_join( join_wf_data, clean_em_data)
 
-## Cleaning for the NA values of Emissions
+# Cleaning for the missing values of emissions
 joined_dataset <- joined_dataset |> filter(is.na(`Total CO2 Emissions (non_biogenic)`) == FALSE)
 
 ```
 
-We now have our join database combined of worforce and emissions previous datasets
+We now have our joined database combined of the previous `emissions_data`, `workforce_ca_data` and `workforce_tx_data` datasets.
+
 
 ## Main target variable
 
+Our variable of interest is `CO2 emissions (non biogenic)`. To better analyze its relationship with the other variables we will use, we first need to represent its distribution and its characteristics. 
+
+We constructed two charts :  
+  - the first chart describes the evolution over time of `CO2 emissions (non biogenic)` for each `State`. We added a `NAICS2  (sectors)` variable to compute the absolute contribution of each sector(NAICS 2) for each state in a given year.
+  - the second chart explores the relative contribution of each `State` in the total `CO2 emissions (non biogenic)` over the years.
 
 ```{r}
-#Graphical representation by sectors that are energy-producing
-#joined_dataset <- joined_dataset |> mutate(
- #   `NAICS2  (sectors)` = substr(industry, 1, 2 ), .keep = "all")
+#| echo: false
+#| message: false
+# Evolution of Total CO2 Emissions of energy producers by State
+joined_dataset |>
+  mutate(
+    `NAICS2  (sectors)` = substr(industry, 1, 2 ), .keep = "all") |>
+  ggplot(aes(x = year, y = `Total CO2 Emissions (non_biogenic)`, fill = `NAICS2  (sectors)`)) +
+  geom_col() +
+  facet_wrap(vars(State), scales = "free_y")
 
-#oined_dataset |> 
-  #filter(!is.na(`Total CO2 Emissions (non_biogenic)`)) |>
-  #ggplot(aes( x =  `Total CO2 Emissions (non_biogenic)`, color = `NAICS2  (sectors)`, fill = `NAICS2  (sectors)`) ) +
-  #geom_density( na.rm = TRUE) + 
-  #scale_x_log10() +
-  #facet_wrap(vars(`NAICS2  (sectors)`))
-
-
-
+# Same scale comparison : Texas vs California participation in C02 emissions
+joined_dataset |>
+  ggplot(aes(x = year, y = `Total CO2 Emissions (non_biogenic)`, fill = State)) +
+  geom_col(position = "fill")
 ```
-
-
 
 
 ## Research question
